--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tutorial_vuetify",
+  "name": "distribuidora",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,9 @@
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
     "firebase": "^10.3.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
+    "pinia": "^2.1.6",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
